Menambahkan poster dan video YT

--- a/index.html
+++ b/index.html
@@ -4,9 +4,68 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <link 
+    rel="stylesheet" 
+    href="style.css">
+  <link 
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css"
+    rel="stylesheet" 
+    integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" 
+    crossorigin="anonymous">
+  <title>Cegah Cyber Crime</title>
 </head>
 <body>
-  <p>IUM</p>
+
+  <div class="container mt-4" id="default-container">
+    <div class="row">
+      <div class="col-8">
+        <img id="default-poster" src="poster.png">
+      </div>
+      <div class="col-4">
+        <iframe 
+          id="iframe"
+          width="370" 
+          height="315" 
+          src="https://www.youtube.com/embed/-mY3YCE-OrU" 
+          title="YouTube video player" 
+          frameborder="0" 
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+          allowfullscreen></iframe>
+      </div>
+    </div>
+  </div>
+
+  <div class="container mt-4" id="responsive-container">
+    <div class="row">
+      <div class="col-12">
+        <img id="responsive-poster" src="poster.png">
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-12">
+        <div class="responsive-video-container">
+          <iframe 
+            width="370" 
+            height="315" 
+            src="https://www.youtube.com/embed/-mY3YCE-OrU" 
+            title="YouTube video player" 
+            frameborder="0" 
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+            allowfullscreen></iframe>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="container">
+    <div class="row">
+      <div class="col-12">
+        <footer>© Kelompok 4 - Informatika Untuk Masyarakat - Telkom University</footer>
+      </div>
+    </div>
+  </div>
+
+  <script src="jquery.min.js"></script>
+  <script type="text/javascript" src="index.js"></script>
 </body>
 </html>
